# rust-learn

./: .gitignore  Cargo.toml  README.md
base/: Cargo.toml
doc/: BASE.md  (+1 more)
thrid-lib/: Cargo.toml  build.rs
thrid-lib/protos/: store.proto
thrid-lib/src/: lib.rs
thrid-lib/src/arrow/: ipc.rs  mod.rs
thrid-lib/src/datafusion/: ROADMAP.md  builder.rs  manifest_list.rs  mod.rs  paimon.rs  paimon_datafusion.rs  reader.rs  snapshot.rs  utils.rs
thrid-lib/src/datafusion/dialect/: mod.rs
thrid-lib/src/datafusion/paimon/: error.rs  example.rs  exec.rs  manifest.rs  manifest_list.rs  mod.rs  reader.rs  snapshot.rs  table.rs  utils.rs
thrid-lib/src/error/: mod.rs
thrid-lib/src/grpc/: client.rs  mod.rs  server.rs
thrid-lib/src/grpc/pb/: mod.rs  store.rs
thrid-lib/src/test/paimon/default.db/ods_mysql_orders/bucket-0/: changelog-7efd6f70-2b0b-4ced-85a1-8ab05655d152-0.orc
thrid-lib/src/test/paimon/default.db/ods_mysql_orders/bucket-1/: changelog-50b838c4-753f-4f30-bdb0-08d1cef13d36-0.orc  data-50b838c4-753f-4f30-bdb0-08d1cef13d36-3.orc
thrid-lib/src/test/paimon/default.db/ods_mysql_orders/manifest/: manifest-866c3659-ebad-456f-b4f5-5af018a3ca3c-0  manifest-866c3659-ebad-456f-b4f5-5af018a3ca3c-1  manifest-866c3659-ebad-456f-b4f5-5af018a3ca3c-2  manifest-866c3659-ebad-456f-b4f5-5af018a3ca3c-3  manifest-list-7ffaa34a-bd1f-4141-9da0-0368d7cc7beb-0.avro  manifest-list-7ffaa34a-bd1f-4141-9da0-0368d7cc7beb-1  manifest-list-7ffaa34a-bd1f-4141-9da0-0368d7cc7beb-2  manifest-list-7ffaa34a-bd1f-4141-9da0-0368d7cc7beb-3  manifest-list-7ffaa34a-bd1f-4141-9da0-0368d7cc7beb-4  (+1 more)
thrid-lib/src/turmoil/: axum.rs
(+65 files in other folders)
