[package]
name = "thrid-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
serde = { version = "1", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
tonic = "0.8.2"
derive_builder = "0.11.2"
tokio = { version = "1", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["tracing-log", "fmt"] }
async-trait = "0.1.68"
futures = "0.3.28"
bytes = "1.4.0"
tokio-stream = "0.1.14"
tokio-stream-ext = "0.1.5"
arrow = "41.0.0"
arrow-csv = "41.0.0"
arrow-schema = "41.0.0"
arrow-array = "41.0.0"
parquet = {version= "41.0.0", features = ["async"]}
tempfile = "3.5.0"
anyhow = "1.0.71"
arrow-cast = { version = "41.0.0", features = ["comfy-table", "prettyprint"] }

[build-dependencies]
proto-builder-trait = "0.5.1"
tonic-build = "0.8.2"
